<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>app</artifactId>
        <groupId>gov.cms.ab2d</groupId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>worker</artifactId>

    <properties>
        <project.root>${basedir}/..</project.root>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <sonar.coverage.exclusions>**/PatientClaimsProcessorImpl.java,**/ContractProcessorImpl.java,**/CoverageDriverImpl.java,**/JobProcessorImpl.java</sonar.coverage.exclusions>
    </properties>

    <dependencies>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>job</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>ab2d-bfd</artifactId>
            <version>${bfd-lib.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.awspring.cloud</groupId>
                    <artifactId>spring-cloud-aws-dependencies</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>ab2d-filters</artifactId>
            <version>${filters-lib.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.awspring.cloud</groupId>
                    <artifactId>spring-cloud-aws-dependencies</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>ab2d-aggregator</artifactId>
            <version>${aggregator-lib.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.awspring.cloud</groupId>
                    <artifactId>spring-cloud-aws-dependencies</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-integration</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-jdbc</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.integration</groupId>
            <artifactId>spring-integration-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>common</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>job</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ca.uhn.hapi.fhir</groupId>
            <artifactId>hapi-fhir-client</artifactId>
            <version>${hapi.version}</version>
        </dependency>
        <dependency>
            <groupId>net.logstash.logback</groupId>
            <artifactId>logstash-logback-encoder</artifactId>
            <version>${logback-encoder.version}</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-jaxb-annotations</artifactId>
        </dependency>

        <dependency>
            <groupId>com.newrelic.agent.java</groupId>
            <artifactId>newrelic-java</artifactId>
            <version>${newrelic.version}</version>
            <scope>provided</scope>
            <type>zip</type>
        </dependency>

        <dependency>
            <groupId>com.newrelic.agent.java</groupId>
            <artifactId>newrelic-api</artifactId>
            <version>${newrelic.version}</version>
        </dependency>

        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>coverage</artifactId>
            <version>0.0.1-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>ab2d-sns-client</artifactId>
            <version>${sns-client.version}</version>
        </dependency>

        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>coverage</artifactId>
            <version>0.0.1-SNAPSHOT</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>

        <!-- used by mockito to mock static methods -->
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.core.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>gov.cms.ab2d</groupId>
            <artifactId>ab2d-events-client</artifactId>
            <version>${events-client.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>io.awspring.cloud</groupId>
                    <artifactId>spring-cloud-aws-dependencies</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
                <!-- We want to use worker as both an executable and as a source jar for the e2e-bfd-test code so
                have a copy with the exe extension for the executable jar, but don't override the source jar -->
                <configuration>
                    <executable>true</executable>
                    <classifier>exe</classifier>
                    <arguments>
                        <argument>parameters</argument>
                    </arguments>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0%</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                            <excludes>
                                <exclude>**/gov/cms/ab2d/worker/SpringBootApp.class</exclude>
                                <!-- exclude the bluebutton package from coverage as it only has a stub -->
                                <exclude>**/gov/cms/ab2d/worker/adapter/bluebutton/**</exclude>
                            </excludes>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Unzip New Relic Java agent into target/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <id>unpack-newrelic</id>
                        <phase>package</phase>
                        <goals>
                            <goal>unpack-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeGroupIds>com.newrelic.agent.java</includeGroupIds>
                            <includeArtifactIds>newrelic-java</includeArtifactIds>
                            <!-- you can optionally exclude files -->
                            <!-- <excludes>**/newrelic.yml</excludes> -->
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                            <outputDirectory>${project.build.directory}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
